2.3.6 (24-04-2020)
- Bug fix: Fix context path on locale change request

2.3.5 (24-04-2020)
- Bug fix: Fixes locale change on uilayer screens

2.3.4 (14-11-2019)
2.3.3 (05-11-2019)
2.3.2 (31-10-2019)
- Improvement: added release notes file