@@ -55,20 +55,18 @@
     <script src="{{contextPath}}/bennu-portal/js/jquery.min.js"></script>
 	<script src="{{contextPath}}/themes/{{school-theme}}/js/bootstrap.min.js"></script>
 	<script> setLang = function(l) {
-        $.post('{{contextPath}}/api/bennu-core/profile/locale/' + l.replace('_', '-')).always(function() {
-            
-            {% if functionality.provider != "uiLayer" %}
-                location.reload();
-            {% else %}
+        $.post('{{contextPath}}/api/bennu-core/profile/locale/' + l.replace('_', '-')).done(function() {
+            location.reload();
+            {% if functionality.provider == "uiLayer" %}
+                var newURL = ""; 
                 var indexOfLocale = location.href.lastIndexOf("/locale=");
                 if(indexOfLocale > 0){
-                    window.location.href = location.href.substring(0,indexOfLocale) + '/locale=' + l.replace('_', '-');
+                    newURL = location.href.substring(0,indexOfLocale) + '/locale=' + l.replace('_', '-');
                 }else{
-                    window.location.href = location.href + '/locale=' + l.replace('_', '-');
-                }
-                location.reload();
-            {% endif %}
-            
+                    newURL = location.href + '/locale=' + l.replace('_', '-');
+                }                        
+                window.location.replace(newURL);
+            {% endif %}    
         });
     }
 	</script>
